# lore

./: .env.example  .env.prod.example  .gitignore  DEPLOY.md  README.md  architecture.md  docker-compose.prod.yml  docker-compose.yml  index.html  package-lock.json  package.json  sql_reqults.txt  vite.config.ts
assets/: index-DIFncWnn.js  index-DSlU6gJ_.css
backend/: Dockerfile  README.md  agent.py  app.py  auth.py  config.py  description.md  dev_audit_server.py  pyproject.toml  sql_demo.py
backend/.chainlit/: config.toml
backend/agents/: __init__.py  base.py  deep.py  fast.py  tools.py
backend/audit/: __init__.py  assembly.py  auth_dep.py  contracts.py  image_safety.py  mount.py  pool.py  postgres_connections.py  read_cursor.py  read_repositories.py  validation.py
backend/audit/_vendor/: redaction.py  storage_contracts.py
backend/audit/http_api/: errors.py  routes.py
backend/docs/superpowers/plans/: 2026-07-10-chainlit-deepagents-skeleton.md
backend/docs/superpowers/specs/: 2026-07-10-chainlit-deepagents-skeleton-design.md  2026-07-10-two-agent-modes-design.md
backend/evals/: dataset.py  evaluators.py  run_sql_eval.py
backend/init/: 10-toast-demo.sh  toast-demo.sql
backend/tests/: conftest.py  fakes.py  graph_utils.py  test_agent.py  test_agents.py  test_app_imports.py  test_audit_assembly.py  test_audit_auth_dep.py  test_audit_config.py  test_audit_http_security.py  test_audit_import.py  test_audit_mount.py  test_audit_pgbouncer_integration.py  test_audit_pool.py  test_auth.py  test_config.py  test_evals.py  test_executor.py  test_executor_pool.py  test_graph_budget.py  test_graph_context.py  test_graph_flow.py  test_guardrails.py  test_oauth.py  test_sql_demo.py  test_sql_graph.py  test_sql_guardrails.py  test_sql_tool.py  test_subagent.py  test_toast_store.py
backend/toast/: executor.py  guardrails.py  pg.py  policy.py  port.py  sql_graph.py  sql_guardrails.py  sql_tool.py  subagent.py  tools.py
docs/: deployment.md  evals.md  fileviewer-integration.md  improvements.md  lore-file-viewer-frontend-spec.md  lore-file-viewer-mockup.html  neo4j-indexing-production.md  sql-demo.md  (+3 more)
lore-core/airflow-providers/apache-airflow-providers-lore/: README.md  pyproject.toml
lore-core/airflow-providers/apache-airflow-providers-lore/airflow/providers/lore/: get_provider_info.py
lore-core/airflow-providers/apache-airflow-providers-lore/airflow/providers/lore/adapters/: airflow_audit_adapters.py  airflow_postgres.py  airflow_s3.py
lore-core/airflow-providers/apache-airflow-providers-lore/airflow/providers/lore/config/: __init__.py  runtime.py
lore-core/airflow-providers/apache-airflow-providers-lore/airflow/providers/lore/operators/: __init__.py  lore_splitter_audit_operator.py  lore_splitter_operator.py
lore-core/airflow-providers/apache-airflow-providers-lore/example_dags/: lore_splitter.py
lore-core/airflow-providers/apache-airflow-providers-lore/example_dags/configs/: lore.yaml.example
lore-core/airflow-providers/apache-airflow-providers-lore/tests/: _airflow_stubs.py  _storage_plans.py  test_audit_airflow_adapters.py  test_audit_service_catalog_rollback.py  test_lore_dag.py  test_lore_splitter_audit_operator.py  test_lore_splitter_operator.py  test_phase26_uat.py  test_provider_metadata.py  test_storage_airflow_hooks.py
lore-core/services/lore-audit-api/: pyproject.toml
lore-core/services/lore-audit-api/src/lore_audit_api/: __init__.py  factory.py  server.py  settings.py
lore-core/services/lore-audit-api/src/lore_audit_api/http/: __init__.py  auth.py  contracts.py  errors.py  limits.py  routes.py
lore-core/services/lore-audit-api/tests/: test_factory.py  test_http_contracts.py  test_http_routes.py  test_http_security.py  test_pgbouncer_integration.py  test_pool.py  test_settings.py
lore-core/services/lore-chat/: .dockerignore  Dockerfile  app.py  audit_auth.py  audit_mount.py  chainlit.md  config.py  dev_audit_server.py  langfuse_tracing.py  langsmith_tracing.py  pyproject.toml  retrieval.py  run_trace.py  studio_graph.py  toast_binding.py
lore-core/services/lore-chat/agents/: __init__.py  base.py  grounded.py  tools.py
lore-core/services/lore-chat/audit/: assembly.py  auth_dep.py  engine_contracts.py  pool.py  read_adapters.py  read_contracts.py  read_service.py  registration.py
lore-core/services/lore-chat/audit/http_api/: __init__.py  contracts.py  errors.py  factory.py  limits.py  middleware.py  routes.py
lore-core/services/lore-chat/evals/: dataset.py  models.py
lore-core/services/lore-chat/evals/datasets/: sql_cases.json
lore-core/services/lore-chat/init/: schema.sql
lore-core/services/lore-chat/tests/: conftest.py  test_agents.py  test_app_imports.py  test_audit_assembly.py  test_audit_auth.py  test_audit_auth_dep.py  test_audit_config.py  test_audit_http_contracts.py  test_audit_http_routes.py  test_audit_http_security.py  test_audit_import.py  test_audit_mount.py  test_executor_pool.py  test_graph_llm.py  test_grounded.py  test_langfuse_tracing.py  test_packaging.py  test_retrieval_tool.py  test_run_trace.py  test_toast_binding.py  test_turn_budget.py
lore-core/services/lore-chat/toast/: executor.py  llm.py  models.py  prompts.py  sql_graph.py  sql_guardrails.py
studio/: .env.example  README.md  graph.py  grounded_graph.py  langgraph.json  pyproject.toml  test_graph_smoke.py
(+177 files in other folders)
