[project]
name = "lore-studio"
version = "0.1.0"
description = "LangGraph Studio runner for the SQL tool (dev-only, optional)"
requires-python = ">=3.13, <3.14"
dependencies = [
    "langgraph-cli[inmem]",
    "langgraph",
    "langchain-openai",
    "langchain-core",
    "asyncpg",
    "pydantic-settings",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["."]
