[project]
name = "lore-studio"
version = "0.1.0"
description = "LangGraph Studio runner for the SQL tool (dev-only, optional)"
requires-python = ">=3.13, <3.14"
dependencies = [
    "langgraph-cli[inmem]",
    "langgraph",
    "langchain-openai",
    "langchain-core",
    "asyncpg",
    "pydantic-settings",
    "sqlglot>=30.12.0",
    # Grounded graph: the retrieval package (pulls neo4j / langchain-ollama /
    # asyncpg / httpx transitively) + langsmith for the stage tracer.
    "lore-retrieval",
    "langsmith",
]

[tool.uv.sources]
lore-retrieval = { path = "../lore-core/packages/lore-retrieval", editable = true }

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["."]
