[project]
name = "lore-audit-api"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "lore-audit-core",
    "fastapi>=0.117",
    "pydantic>=2.12",
    "uvicorn>=0.34",
    "psycopg[binary,pool]==3.3.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lore_audit_api"]
