[project]
name = "datacraft-chainlit"
version = "0.1.0"
description = "Minimal Chainlit + deepagents service for datacraft"
requires-python = ">=3.13"
dependencies = [
    "chainlit>=2.0",
    "deepagents",
    "langchain-ollama",
    "langgraph",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg",
    "pyjwt>=2.8",
    "langchain-openai>=1.3.5",
    "pydantic-settings>=2.14.2",
    "sqlglot>=30.12.0",
    "langsmith>=0.2",
    "psycopg[binary,pool]==3.3.4",
    "lore-audit-core",
    "lore-audit-api",
    "lore-retrieval",
]

[tool.setuptools]
py-modules = ["app", "auth", "config", "audit_mount", "audit_auth", "retrieval", "toast_binding", "run_trace"]
packages = ["agents", "toast", "evals"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# uv sync не устанавливает сам проект (нет [build-system], root — virtual),
# поэтому модули app/agent/auth импортируются из корня проекта.
pythonpath = ["."]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "mypy>=2.2.0",
    "ruff>=0.15.21",
]
